     as necessary, so you can write ``(eval `(+ 1 ~n))`` instead of
     ``(eval `(+ 1 ~(HyInteger n)))``
   * Literal `Inf`s and `NaN`s must now be capitalized like that
   * `get` is available as a function
   * new `comment` macro
   * support EDN `#_` syntax to discard the next term
   * `return` has been implemented as a special form

   [ Bug Fixes ]
   * Numeric literals are no longer parsed as symbols when followed by a dot
     and a symbol
   * Hy now respects the environment variable PYTHONDONTWRITEBYTECODE
   * String literals should no longer be interpreted as special forms or macros
   * Tag macros (née sharp macros) whose names begin with `!` are no longer
     mistaken for shebang lines
   * Fixed a bug where REPL history wasn't saved if you quit the REPL with
     `(quit)` or `(exit)`
   * `exec` now works under Python 2
   * No TypeError from multi-arity defn returning values evaluating to None
   * try form now possible in defmacro/deftag
   * Fixed a crash when `macroexpand`ing a macro with a named import
   * Fixed a crash when `with` suppresses an exception. `with` now returns
     `None` in this case.
   * Fixed a crash when --repl-output-fn raises an exception
   * `assoc` now evaluates its arguments only once each
   * `break` and `continue` now raise an error when given arguments
     instead of silently ignoring them

   [ Misc. Improvements ]
   * `read`, `read_str`, and `eval` are exposed and documented as top-level
     functions in the `hy` module

Changes from 0.12.1

   [ Language Changes ]
   * Pythons 2.6, 3.0, 3.1, and 3.2 are no longer supported
   * `let` has been removed. Python's scoping rules do not make a proper
     implementation of it possible. Use `setv` instead.
   * `lambda` has been removed, but `fn` now does exactly what `lambda` did
   * `defreader` has been renamed to `defsharp`; what were previously called
     "reader macros", which were never true reader macros, are now called
     "sharp macros"